--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Engineer"
+  name             : " " #Engineer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : ""
-  location         : "Earth"
+  location         : ""
   email            :
 #  links:
 #    - label: "Email"
