--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  #- title: "Quick-Start Guide"
+  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -10,3 +10,28 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+docs:
+  - title: "Start page"
+    url: /
+  - title: "Tags"
+    url: /tags/
+  - title: "Archive"
+    url: /year-archive/
+#  - title: About
+#    url: /_pages/about/
+
+#pages:
+#  - title: About
+#    url: /_pages/
+
+main:
+  - title: "Kubernetes"
+    url: /kubernetes/
+#    children:
+#      - title: "Dogs"
+#        url: /pets/dogs/
+  - title: "Linux"
+    url: /Linux/
+#    children:
+#      - title: "VW"
+#        url: /pets/vw/
