--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   name             : " " #Engineer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : ""
-  location         : ""
+#  location         : ""
   email            :
 #  links:
 #    - label: "Email"
